# poetry-new-project

./: LICENSE  README.md  pyproject.toml
poetry_new_project/: app.py
