[tool.poetry]
name = "poetry-new-project"
version = "0.1.0"
description = ""
authors = ["Zach Bellay <zachbellay@hotmail.com>"]
readme = "README.md"
packages = [{include = "poetry_new_project"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.scripts]
poetry-new-project = "poetry_new_project.app:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
